fix credits header logo too low

--- a/gymnastique-2/public/css/style.css
+++ b/gymnastique-2/public/css/style.css
@@ -331,6 +331,10 @@ svg.image-histoire, svg.image-jo{
     margin-bottom: 20px;
 }
 
+#credits-header {
+    padding-top: 30px;
+}
+
 #histoire-header > img {
     padding: 10px;
 }
